# masters-robbe-haegeman

./: README.md
.github/: README.md  dependabot.yml  docs.md
.github/workflows/: check.yml  check_config.yml  scheduled.yml  scheduled_config.yml
.github/workflows/reusable/: check.yml  scheduled.yml
controllers/percona_mongodb_event_creator/: .gitignore  Cargo.toml  README.md
controllers/percona_mongodb_event_creator/src/: book.rs  cli.rs  db.rs  main.rs
experiments/cronjob-tutorial/: README.md
experiments/cronjob-tutorial/kube-rs/: Cargo.toml
experiments/cronjob-tutorial/kube-rs/samples/: batch_v1_cronjob.yaml
experiments/cronjob-tutorial/kube-rs/src/: controller.rs  error.rs  lib.rs  util.rs
experiments/cronjob-tutorial/kubebuilder/: Makefile
experiments/cronjob-tutorial/kubebuilder/config/default/: manager_webhook_patch.yaml  webhookcainjection_patch.yaml
experiments/mongodb_event_creator/: Cargo.toml
operators/kube-rs-building-cronjob/: .gitignore  Cargo.toml  README.md
operators/kube-rs-building-cronjob/crd/: cronjob.yaml
operators/kube-rs-building-cronjob/src/: controller.rs  crd.rs  crdgen.rs  main.rs  util.rs
operators/kubebuilder-building-cronjob/: PROJECT  README.md
operators/kubebuilder-building-cronjob/api/v1/: cronjob_types.go  cronjob_webhook.go
operators/kubebuilder-building-cronjob/cmd/: main.go
operators/kubebuilder-building-cronjob/config/certmanager/: certificate.yaml
operators/kubebuilder-building-cronjob/config/default/: kustomization.yaml  metrics_service.yaml
operators/kubebuilder-building-cronjob/config/manager/: manager.yaml
operators/kubebuilder-building-cronjob/config/network-policy/: allow-metrics-traffic.yaml
operators/kubebuilder-building-cronjob/config/prometheus/: monitor.yaml
operators/kubebuilder-building-cronjob/config/webhook/: service.yaml
operators/kubebuilder-building-cronjob/internal/controller/: cronjob_controller.go  cronjob_controller_test.go  suite_test.go
operators/kubebuilder-building-cronjob/test/e2e/: e2e_suite_test.go  e2e_test.go
operators/poc-secondary-resource-management/: Cargo.toml
operators/poc-secondary-resource-management/demo/: Cargo.toml
operators/poc-secondary-resource-management/demo/src/: controller.rs  crd.rs  crdgen.rs  main.rs  reconcile_sec_res.rs
operators/poc-secondary-resource-management/lib/: Cargo.toml
operators/poc-secondary-resource-management/lib/src/: lib.rs
operators/poc-secondary-resource-management/src/: controller.rs  crd.rs  error.rs  lib.rs  main.rs  reconcile_sec_res.rs
poc/: .dockerignore  Cargo.toml
poc-secondary-resource-management/: Cargo.toml
poc-secondary-resource-management/api-extension/: Cargo.toml  Dockerfile  README.md  test.sh
poc-secondary-resource-management/api-extension/manifests/: api_server.yaml  test_resource.yaml
poc-secondary-resource-management/api-extension/src/: error.rs  main.rs  resources.rs
poc-secondary-resource-management/demo/: Cargo.toml
poc-secondary-resource-management/demo/src/: controller.rs  crd.rs  main.rs
poc-secondary-resource-management/lib/: Cargo.toml
poc-secondary-resource-management/lib/src/: error.rs  lib.rs
poc-secondary-resource-management/lib/tests/: crd.rs  test.rs
poc-secondary-resource-management/lib/tests/manifests/: database.yaml
poc/api-extension/src/: error.rs  main.rs
poc/benchmark/: .gitignore  Cargo.toml  Dockerfile  README.md  compare_kind_latency.sh  compare_resource_latency.sh  current-results-latency-one-kind.jsonl
poc/benchmark/crd/: database.yaml
poc/benchmark/manifests/: job.yaml  setup.yaml
poc/benchmark/results/: README.md
poc/benchmark/results/gke_affinity/: results_kind_latency.jsonl  results_resource_latency.jsonl
poc/benchmark/results/gke_antiaffinity/: results_kind_latency.jsonl  results_resource_latency.jsonl
poc/benchmark/results/minikube_external/: results_kind_latency.jsonl  results_resource_latency.jsonl
poc/benchmark/results/minikube_internal/: results_kind_latency.jsonl  results_resource_latency.jsonl
poc/benchmark/src/: case.rs  cli.rs  crd.rs  dummy.rs  main.rs
poc/benchmark/terraform-gke-cluster/: gke.tf  outputs.tf  vpc.tf
poc/benchmark/visualize/: main.py  parsing.py  requirements.txt  visualize.ipynb
poc/crd/: database.yaml
poc/demo/: Cargo.toml
poc/demo-controller/: Cargo.toml
poc/demo-controller/manifests/: database_sample.yaml
poc/demo-controller/src/: controller.rs  crd.rs  reconcile_sec_res.rs
poc/demo/src/: controller.rs  crd.rs  reconcile_sec_res.rs
poc/kube-primary/: Cargo.toml
poc/kube-primary/src/: lib.rs
poc/kube-primary/tests/: crd.rs  test.rs
poc/lib/: Cargo.toml
poc/lib/src/: error.rs
poc/lib/tests/: crd.rs  test.rs
poc/primary-aggregator-api/: Cargo.toml  Dockerfile  README.md  test.sh
poc/primary-aggregator-api/manifests/: api_server.yaml  otel_collector.yaml  test_resource.yaml
poc/primary-aggregator-api/src/: main.rs  resources.rs  telemetry.rs
thesis_resources/: sources.md
thesis_resources/findings/: api_extension_server.md  architecture_operators.md  comparing_kube-rs_kubebuilder.md  configuration_schedule.md  extension_api_server.md  fetching_multiple_kinds.md  investigation_other_operators.md  investigation_percona_mongodb_reconcile.md  investigation_reconcile_other_operators.md  investigation_reconcile_percona_mongodb.md  transition_to_wasip.md
thesis_resources/investigation_reconcile_percona_mongodb/: README.md  tracing_percona_mongodb.md
thesis_resources/investigation_reconcile_percona_mongodb/mongodb_event_creator/: Cargo.toml  README.md
thesis_resources/meeting_notes/: Meeting 02-10.md  Meeting 02-24.md  Meeting 03-10.md  Meeting 03-24.md  Meeting 04-11.md  Meeting 04-24.md  Meeting 05-08.md  Meeting 05-20.md  Meeting 09-27.md  Meeting 10-07.md  Meeting 10-21.md  Meeting 11-04.md  Meeting 11-18.md  Meeting 12-02.md  Meeting 12-11.md  README.md
thesis_resources/reconcile_testing_operators/: README.md  tracing_percona_mongodb.md
utils/percona_mongodb_event_creator/: README.md
utils/percona_mongodb_event_creator/src/: db.rs  main.rs
(+8 files in other folders)
