[workspace]
members = ["primary-aggregator-api", "demo-controller", "kube-primary", "benchmark"]
resolver = "2"

[workspace.package]
version = "1.0.0"
repository = "https://github.com/idlab-discover/masters-robbe-haegeman"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85.0"                                                 # Edition 2024

# Similar structure to https://github.com/kube-rs/kube/blob/83f5fe807300b585d4b5df85bbe16d3ee2b8e438/Cargo.toml
[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
axum-server = "0.7.2"
chrono = "0.4.41"
either = "1.15.0"
futures = "0.3.31"
k8s-openapi = "0.25.0"
kube = { version = "1.0.0", features = ["aws-lc-rs"] }
kube-core = { version = "1.0.0", default-features = false } # For its error types
rcgen = "0.13.2"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = "1.45.1"
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.4", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rustls = { version = "0.23.27", default-features = false, features = [
    "aws_lc_rs",
] }
