[package]
name = "kube-rs-building-cronjob"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
kube = { version = "0.97.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["v1_31", "schemars"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
kube-derive = "0.97.0"
schemars = "0.8.21"
serde_json = "1.0.133"
thiserror = "2.0.3"
futures = "0.3.31"
serde_yaml = "0.9.34"
log = "0.4.22"
env_logger = "0.11.5"
cron = "0.13.0"
