[package]
name = "api-extension"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = "0.4.40"
k8s-openapi = { version = "0.24.0", features = ["v1_31", "schemars"] }
kube = { version = "0.99.0", default-features = false, features = [
    "client",
    "derive",
] }
schemars = "0.8.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.2", default-features = false, features = [
    "trace",
] }
