[package]
name = "api-extension"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
rcgen = "0.13.2"
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.2", default-features = false, features = [
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
