[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.99.0", default-features = false, features = [
    "client",
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.24.0", features = ["v1_31", "schemars"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
futures = "0.3.31"
log = "0.4.22"
either = "1.15.0"
async-trait = "0.1.88"
