[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.99.0", default-features = false, features = [
    "client",
    "derive",
    "runtime",
] }
kube-core = { version = "0.99.0", default-features = false } # For its error types
k8s-openapi = { version = "0.24.0", features = ["v1_31", "schemars"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
either = "1.15.0"
async-trait = "0.1.88"
tracing = "0.1.41"

[dev-dependencies]
schemars = "0.8.21"
serde_json = "1.0.133"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
