[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.99.0", default-features = false, features = [
    "client",
    "derive",
    "runtime",
    "rustls-tls",
] }
kube-core = { version = "0.99.0", default-features = false } # For its error types
k8s-openapi = { version = "0.24.0", features = ["v1_31", "schemars"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
either = "1.15.0"
async-trait = "0.1.88"
serde_yaml = "0.9.34"
tracing = "0.1.41"

[dev-dependencies]
rustls = "0.23.26" # Was required to avoid "no process-level CryptoProvider available -- call CryptoProvider::install_default() before this point"
schemars = "0.8.21"
serde_json = "1.0.133"
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
