[package]
name = "primary-aggregator-api"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server = { workspace = true, features = ["tls-rustls"] }
k8s-openapi = { workspace = true, features = ["v1_31"] }
kube.workspace = true
rcgen.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rustls.workspace = true
