[package]
name = "kube-rs-building-cronjob"
version = "0.1.0"
edition = "2021"
# Found using cargo msrv (https://github.com/foresterre/cargo-msrv?tab=readme-ov-file)
rust-version = "1.81" # due to kube@0.99.0

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[dependencies]
cron = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
k8s-openapi = { version = "0.25.0", features = ["v1_31", "schemars"] }
kube = { version = "1.0.0", features = ["derive", "runtime"] }
log = "0.4.27"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
