[package]
name = "percona_mongodb_event_creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive", "env"] }
futures-util = "0.3.31"
mongodb = { version = "3.1.0" }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
